# vehicle-fleet-management-database

./: README.md
C++/: CMakeLists.txt  MFConnect.aps  MFConnect.cpp  MFConnect.h  MFConnect.rc  MFConnect.sln  MFConnect.vcxproj  MFConnect.vcxproj.filters  MFConnectDlg.cpp  MFConnectDlg.h  myconnectorclassDB.cpp  myconnectorclassDB.h  resource.h
C++/Debug/: MFConnect.exe.recipe  MFConnect.res  MFConnect.vcxproj.FileListAbsolute.txt  vc142.idb
C++/Debug/MFConnect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MFConnect.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
C++/res/: MFConnect.rc2
C++/x64/Debug/: MFConnect.res  vc142.idb
C++/x64/Debug/MFConnect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MFConnect.lastbuildstate  rc.command.1.tlog  rc.write.1.tlog
SQL/: gf.sql
SQL/queries/: abastecimentos+500_p_ano.sql  abastecimentos-por-posto.sql  consumos por ano.sql  consumos-por-gasolineira.sql  consumos_p_mes_ano_pivot.sql  idade_media_viaturas.sql  idade_viaturas.sql  media_100km.sql  n_abastecimentos_+_consumos_p_condutor.sql  n_abastecimentos_p_gasolineira.sql  n_colaborador_p_cargo.sql  n_colaboradores_p_departamento.sql  n_estagiarios.sql  n_viaturas_p_combustivel.sql  n_viaturas_p_condutor.sql  postos_n_utilizados.sql  reembolsos_gasolineiras_p_abastecimento.sql  reembolsos_gasolineiras_p_ano_pivot.sql  top10+consumos.sql  top10_viaturas_consumo_medio.sql
SQL/tables/: atribuicao.csv  colaborador.csv  gasolineira.csv  posto.csv  viatura.csv
